[workspace]
members = [
    "common",
    "client",
    "gatekeeper",
    "GameServer",
    "Orchestrator",
    "game_sockets",
    "quadtree",
    "broker",
    "ai_service",
    "pathing_service",
    "AbilityService",
    "database_service",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace.dependencies]
# internal crates
common       = { path = "common" }
game_sockets = { path = "game_sockets" }

# serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
bitcode    = { version = "0.6", features = ["serde"] }
wincode    = { version = "0.5.4", features = ["derive", "uuid"] }

# async runtime
tokio      = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures    = "0.3"

# networking
axum    = "0.8"
quinn   = "0.11"
rustls  = { version = "0.23", features = ["ring"] }
rcgen   = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower   = "0.5"

# database
deadpool-redis = "0.18"
redis          = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager"] }

# bevy
bevy = { version = "0.18.1", default-features = false }
avian2d = { git = "https://github.com/avianphysics/avian", branch = "main", default-features = false, features = ["2d", "f32", "parry-f32", "xpbd_joints", "parallel"] }

# utilities
uuid               = { version = "1", features = ["v4", "serde"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
bytes              = "1"
futures-lite       = "2"
thiserror          = "2"
dotenv             = "0.15"
bollard            = { version = "0.18", features = ["ssl"] }
