[package]
name = "AbilityService"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid        = { workspace = true }
common      = { workspace = true }
dotenv = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }