[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
axum               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
redis              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv             = { workspace = true }
