[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "orchestrator"
path = "src/main.rs"

[dependencies]
common             = { workspace = true }
tokio              = { workspace = true }
axum               = { workspace = true }
quinn              = "0.10"
rcgen              = "0.11"
rustls             = { version = "0.21", features = ["dangerous_configuration"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv             = { workspace = true }
anyhow             = { workspace = true }
uuid               = { workspace = true }
bollard            = { workspace = true }
