[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde   = { workspace = true }
serde_json = { workspace = true }
bitcode = { workspace = true }
wincode = { workspace = true }
redis   = { workspace = true }
uuid   = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
game_sockets = { workspace = true }
