[package]
name = "client"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "client"
path = "main.rs"

[dependencies]
common       = { workspace = true }
bevy         = { workspace = true }
quinn        = { workspace = true }
rustls       = { workspace = true }
reqwest      = { workspace = true }
tokio        = { workspace = true }
bitcode      = { workspace = true }
serde        = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }
bytes        = { workspace = true }
futures-lite = { workspace = true }
