[package]
name = "quadtree"
version = "0.1.0"
edition = "2024"

[dependencies]
common         = { workspace = true }
rand           = "0.7.0"
tokio          = { workspace = true }
quinn          = "0.10"
rustls         = { version = "0.21", features = ["dangerous_configuration"] }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv         = { workspace = true }
anyhow         = { workspace = true }
uuid           = { workspace = true }
bytes          = { workspace = true }
