[package]
name = "gatekeeper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gatekeeper"
path = "src/main.rs"

[dependencies]
common             = { workspace = true }
axum               = { workspace = true }
tokio              = { workspace = true }
reqwest            = { workspace = true }
deadpool-redis     = { workspace = true }
uuid               = { workspace = true }
serde              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
